# prithvi

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  static.yml
docs/: index.html  style.css
examples/: basic_scan.sh  programmatic.py
src/prithvi/: __init__.py  cli.py  config.py  core.py  models.py
src/prithvi/cve/: database.py  matcher.py
src/prithvi/dockerfile/: analyzer.py  parser.py
src/prithvi/dockerfile/rules/: __init__.py  apt.py  base.py  copy.py  healthcheck.py  ports.py  secrets.py  tags.py  user.py
src/prithvi/image/: analyzer.py  inspector.py  layer.py  packages.py
src/prithvi/reporting/: __init__.py  base.py  html_reporter.py  json_reporter.py  table_reporter.py
src/prithvi/reporting/templates/: report.html.j2
src/prithvi/utils/: version.py
tests/: conftest.py  test_cli.py  test_models.py  test_scanner.py
tests/cve/: test_database.py
tests/dockerfile/: test_analyzer.py  test_parser.py  test_rules.py
tests/fixtures/: Dockerfile.bad  Dockerfile.good  Dockerfile.partial
tests/reporting/: test_html_reporter.py  test_json_reporter.py  test_table_reporter.py
